comments nog